### refactor: mise à jour des métadonnées du package
- Changement du nom vers `@jlf/typed-form-craft`
- Mise à jour de la version à `1.0.0`

--- a/typed-form-craft/projects/typed-form-craft/package.json
+++ b/typed-form-craft/projects/typed-form-craft/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "typed-form-craft",
-  "version": "0.0.1",
+  "name": "@jlf/typed-form-craft",
+  "version": "1.0.0",
   "peerDependencies": {
     "@angular/common": "^19.2.0",
     "@angular/core": "^19.2.0"
