### feat: ajout de la configuration Jest et des utilitaires de validation
- Intégration de Jest pour les tests unitaires avec `jest-preset-angular`
- Ajout de nouveaux utilitaires de validation `JlValidators` et `conditionalValidator`
- Création de tests unitaires pour les utilitaires de formulaire
- Mise à jour de la configuration TypeScript pour supporter les décorateurs et les chemins relatifs
- Suppression de Karma et ajout des dépendances Jest dans `package-lock.json`

--- a/typed-form-craft/projects/typed-form-craft/package.json
+++ b/typed-form-craft/projects/typed-form-craft/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jlf/typed-form-craft",
-  "version": "1.0.0",
+  "name": "jlf-typed-form-craft",
+  "version": "1.0.3",
   "peerDependencies": {
     "@angular/common": "^19.2.0",
     "@angular/core": "^19.2.0"
