--- a/typed-form-craft/angular.json
+++ b/typed-form-craft/angular.json
@@ -25,13 +25,9 @@
           "defaultConfiguration": "production"
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-devkit/build-angular:jest",
           "options": {
-            "tsConfig": "projects/typed-form-craft/tsconfig.spec.json",
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ]
+            "tsConfig": "tsconfig.spec.json"
           }
         }
       }
