--- a/typed-form-craft/tsconfig.json
+++ b/typed-form-craft/tsconfig.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
     "strict": true,
+    "emitDecoratorMetadata": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
@@ -20,7 +21,8 @@
     "module": "ES2022",
     "paths": {
       "typed-form-craft": [
-        "./dist/typed-form-craft"
+        "./dist/typed-form-craft",
+        "./projects/typed-form-craft/src/public-api.ts"
       ]
     }
   },
